--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -37,7 +37,7 @@
 </p><p><span id="Edit_object_label"></span>
 </p>
 <h3><span id=".C3.9Aprava_popisku_objektu"></span><span class="mw-headline" id="&Uacute;prava_popisku_objektu">&Uacute;prava popisku objektu</span></h3>
-<p>Select an object in the first column and press <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">F2</span> (on Windows and Linux), or <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Enter</span> (on macOS), to edit its <span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Label</b> property. This property can also be edited via the context menu option <b>Rename</b> or in the <a href="../Property_View.html" title="Property View">Property View</a>.
+<p>Vyberte objekt v prvn&iacute;m sloupci a stiskn&#283;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">F2</span> (ve Windows a Linuxu) nebo <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Enter</span> (v macOS), abyste upravili jeho <span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Popisek</b>. Tuto vlastnost lze tak&eacute; upravit pomoc&iacute; kontextov&eacute;ho menu <b>P&#345;ejmenovat</b> nebo v <a href="../Property_View.html" title="Property View">Zobrazen&iacute; vlastnost&iacute;</a>.
 </p>
 <h3><span class="mw-headline" id="Edit_object_description">Edit object description</span></h3>
 <p>An object can optionally have a description. This information is stored in its <span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Label2</b> property. If the description column is displayed you can edit this property by selecting an object in that column and pressing <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">F2</span> (on Windows and Linux), or <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Enter</span> (on macOS). The property can also be changed in the <a href="../Property_View.html" title="Property View">Property View</a>.
@@ -159,15 +159,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122184525
+Cached time: 20260122184927
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.116 seconds
-Real time usage: 0.225 seconds
+CPU time usage: 0.119 seconds
+Real time usage: 0.242 seconds
 Preprocessor visited node count: 752/1000000
-Post&#8208;expand include size: 37981/2097152 bytes
-Template argument size: 12188/2097152 bytes
+Post&#8208;expand include size: 37991/2097152 bytes
+Template argument size: 12198/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -175,19 +175,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   55.395      1 -total
- 25.06%   13.884      1 Template:TOCright
- 19.48%   10.793      1 Template:Std_Base_navi/cs
- 16.81%    9.314      1 Template:Userdocnavi/cs
- 16.44%    9.107      3 Template:Navigation_menu_2
- 12.17%    6.739      1 Template:Interface_navi/cs
-  6.88%    3.809      2 Template:PropertyData
-  3.94%    2.183      3 Template:Variable
-  3.33%    1.846      2 Template:Caption
-  3.05%    1.688      1 Template:PropertyView
+100.00%   62.349      1 -total
+ 21.28%   13.267      1 Template:Interface_navi/cs
+ 18.66%   11.637      1 Template:Std_Base_navi/cs
+ 11.40%    7.110      3 Template:Navigation_menu_2
+ 11.05%    6.893      2 Template:PropertyData
+  9.51%    5.927      1 Template:PropertyView
+  7.63%    4.758      1 Template:Userdocnavi/cs
+  4.81%    2.998      1 Template:TOCright
+  4.71%    2.934      3 Template:Variable
+  4.48%    2.794     19 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122184524 and revision id 1742594. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122184926 and revision id 1742596. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
