--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -38,8 +38,9 @@
 </p>
 <h3><span id=".C3.9Aprava_popisku_objektu"></span><span class="mw-headline" id="&Uacute;prava_popisku_objektu">&Uacute;prava popisku objektu</span></h3>
 <p>Vyberte objekt v prvn&iacute;m sloupci a stiskn&#283;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">F2</span> (ve Windows a Linuxu) nebo <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Enter</span> (v macOS), abyste upravili jeho <span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Popisek</b>. Tuto vlastnost lze tak&eacute; upravit pomoc&iacute; kontextov&eacute;ho menu <b>P&#345;ejmenovat</b> nebo v <a href="../Property_View.html" title="Property View">Zobrazen&iacute; vlastnost&iacute;</a>.
+</p><p><span id="Edit_object_description"></span>
 </p>
-<h3><span class="mw-headline" id="Edit_object_description">Edit object description</span></h3>
+<h3><span id=".C3.9Aprava_popisu_objektu"></span><span class="mw-headline" id="&Uacute;prava_popisu_objektu">&Uacute;prava popisu objektu</span></h3>
 <p>An object can optionally have a description. This information is stored in its <span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Label2</b> property. If the description column is displayed you can edit this property by selecting an object in that column and pressing <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">F2</span> (on Windows and Linux), or <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Enter</span> (on macOS). The property can also be changed in the <a href="../Property_View.html" title="Property View">Property View</a>.
 </p>
 <h3><span class="mw-headline" id="Context_menu">Context menu</span></h3>
@@ -159,13 +160,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122184927
+Cached time: 20260122184954
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.119 seconds
-Real time usage: 0.242 seconds
-Preprocessor visited node count: 752/1000000
+CPU time usage: 0.120 seconds
+Real time usage: 0.163 seconds
+Preprocessor visited node count: 753/1000000
 Post&#8208;expand include size: 37991/2097152 bytes
 Template argument size: 12198/2097152 bytes
 Highest expansion depth: 7/100
@@ -175,19 +176,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   62.349      1 -total
- 21.28%   13.267      1 Template:Interface_navi/cs
- 18.66%   11.637      1 Template:Std_Base_navi/cs
- 11.40%    7.110      3 Template:Navigation_menu_2
- 11.05%    6.893      2 Template:PropertyData
-  9.51%    5.927      1 Template:PropertyView
-  7.63%    4.758      1 Template:Userdocnavi/cs
-  4.81%    2.998      1 Template:TOCright
-  4.71%    2.934      3 Template:Variable
-  4.48%    2.794     19 Template:KEY
+100.00%   41.654      1 -total
+ 23.30%    9.705      1 Template:Std_Base_navi/cs
+ 17.14%    7.139      3 Template:Navigation_menu_2
+ 13.67%    5.694      1 Template:Interface_navi/cs
+ 12.16%    5.064      1 Template:Userdocnavi/cs
+ 10.42%    4.340      2 Template:PropertyData
+  5.89%    2.454     19 Template:KEY
+  5.78%    2.407      2 Template:Caption
+  5.20%    2.167      1 Template:FALSE
+  5.18%    2.158      3 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122184926 and revision id 1742596. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122184954 and revision id 1742598. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
