--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -41,7 +41,7 @@
 </p><p><span id="Edit_object_description"></span>
 </p>
 <h3><span id=".C3.9Aprava_popisu_objektu"></span><span class="mw-headline" id="&Uacute;prava_popisu_objektu">&Uacute;prava popisu objektu</span></h3>
-<p>An object can optionally have a description. This information is stored in its <span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Label2</b> property. If the description column is displayed you can edit this property by selecting an object in that column and pressing <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">F2</span> (on Windows and Linux), or <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Enter</span> (on macOS). The property can also be changed in the <a href="../Property_View.html" title="Property View">Property View</a>.
+<p>Objekt m&#367;&#382;e m&iacute;t voliteln&#283; popis. Tato informace je ulo&#382;ena v jeho vlastnosti <span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Label2</b>. Pokud je zobrazen sloupec s popisem, m&#367;&#382;ete tuto vlastnost upravit v&yacute;b&#283;rem objektu v tomto sloupci a stisknut&iacute;m kl&aacute;vesy <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">F2</span> (ve Windows a Linuxu) nebo <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Enter</span> (v macOS). Vlastnost lze tak&eacute; zm&#283;nit v <a href="../Property_View.html" title="Property View">zobrazen&iacute; vlastnost&iacute;</a>.
 </p>
 <h3><span class="mw-headline" id="Context_menu">Context menu</span></h3>
 <p>The options in the context menu of the Tree View depend on the selected object(s) and the currently active workbench. To display this menu right-click the background of the list, right-click an object in the list, or select multiple objects in the list and then right-click one of them.
@@ -160,12 +160,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122184954
+Cached time: 20260122185202
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.120 seconds
-Real time usage: 0.163 seconds
+CPU time usage: 0.164 seconds
+Real time usage: 0.247 seconds
 Preprocessor visited node count: 753/1000000
 Post&#8208;expand include size: 37991/2097152 bytes
 Template argument size: 12198/2097152 bytes
@@ -176,19 +176,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.654      1 -total
- 23.30%    9.705      1 Template:Std_Base_navi/cs
- 17.14%    7.139      3 Template:Navigation_menu_2
- 13.67%    5.694      1 Template:Interface_navi/cs
- 12.16%    5.064      1 Template:Userdocnavi/cs
- 10.42%    4.340      2 Template:PropertyData
-  5.89%    2.454     19 Template:KEY
-  5.78%    2.407      2 Template:Caption
-  5.20%    2.167      1 Template:FALSE
-  5.18%    2.158      3 Template:Variable
+100.00%   58.738      1 -total
+ 26.44%   15.532      1 Template:Std_Base_navi/cs
+ 20.58%   12.091      3 Template:Navigation_menu_2
+ 18.13%   10.647      1 Template:Interface_navi/cs
+ 10.46%    6.142      1 Template:Userdocnavi/cs
+  7.25%    4.260      2 Template:PropertyData
+  6.33%    3.716     19 Template:KEY
+  5.26%    3.088      1 Template:PropertyView
+  4.54%    2.666      3 Template:Variable
+  4.49%    2.639      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122184954 and revision id 1742598. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122185202 and revision id 1742600. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
