--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -42,8 +42,9 @@
 </p>
 <h3><span id=".C3.9Aprava_popisu_objektu"></span><span class="mw-headline" id="&Uacute;prava_popisu_objektu">&Uacute;prava popisu objektu</span></h3>
 <p>Objekt m&#367;&#382;e m&iacute;t voliteln&#283; popis. Tato informace je ulo&#382;ena v jeho vlastnosti <span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Label2</b>. Pokud je zobrazen sloupec s popisem, m&#367;&#382;ete tuto vlastnost upravit v&yacute;b&#283;rem objektu v tomto sloupci a stisknut&iacute;m kl&aacute;vesy <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">F2</span> (ve Windows a Linuxu) nebo <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Enter</span> (v macOS). Vlastnost lze tak&eacute; zm&#283;nit v <a href="../Property_View.html" title="Property View">zobrazen&iacute; vlastnost&iacute;</a>.
+</p><p><span id="Context_menu"></span>
 </p>
-<h3><span class="mw-headline" id="Context_menu">Context menu</span></h3>
+<h3><span id="Kontextov.C3.A9_menu"></span><span class="mw-headline" id="Kontextov&eacute;_menu">Kontextov&eacute; menu</span></h3>
 <p>The options in the context menu of the Tree View depend on the selected object(s) and the currently active workbench. To display this menu right-click the background of the list, right-click an object in the list, or select multiple objects in the list and then right-click one of them.
 </p>
 <h3><span class="mw-headline" id="Keyboard_modifiers">Keyboard modifiers</span></h3>
@@ -160,13 +161,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122185202
+Cached time: 20260122185216
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.164 seconds
-Real time usage: 0.247 seconds
-Preprocessor visited node count: 753/1000000
+CPU time usage: 0.138 seconds
+Real time usage: 0.240 seconds
+Preprocessor visited node count: 754/1000000
 Post&#8208;expand include size: 37991/2097152 bytes
 Template argument size: 12198/2097152 bytes
 Highest expansion depth: 7/100
@@ -176,19 +177,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   58.738      1 -total
- 26.44%   15.532      1 Template:Std_Base_navi/cs
- 20.58%   12.091      3 Template:Navigation_menu_2
- 18.13%   10.647      1 Template:Interface_navi/cs
- 10.46%    6.142      1 Template:Userdocnavi/cs
-  7.25%    4.260      2 Template:PropertyData
-  6.33%    3.716     19 Template:KEY
-  5.26%    3.088      1 Template:PropertyView
-  4.54%    2.666      3 Template:Variable
-  4.49%    2.639      1 Template:TOCright
+100.00%   50.379      1 -total
+ 20.21%   10.184      1 Template:Interface_navi/cs
+ 18.89%    9.516      1 Template:Std_Base_navi/cs
+ 16.39%    8.257      3 Template:Navigation_menu_2
+ 12.51%    6.300      2 Template:PropertyData
+ 12.45%    6.272      1 Template:Userdocnavi/cs
+  7.41%    3.731      1 Template:TOCright
+  6.91%    3.483      3 Template:Variable
+  4.77%    2.402      1 Template:FALSE
+  4.22%    2.128     19 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122185202 and revision id 1742600. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122185216 and revision id 1742602. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
