--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -45,7 +45,7 @@
 </p><p><span id="Context_menu"></span>
 </p>
 <h3><span id="Kontextov.C3.A9_menu"></span><span class="mw-headline" id="Kontextov&eacute;_menu">Kontextov&eacute; menu</span></h3>
-<p>The options in the context menu of the Tree View depend on the selected object(s) and the currently active workbench. To display this menu right-click the background of the list, right-click an object in the list, or select multiple objects in the list and then right-click one of them.
+<p>Mo&#382;nosti v kontextov&eacute;m menu stromov&eacute;ho zobrazen&iacute; z&aacute;vis&iacute; na vybran&yacute;ch objektech a aktu&aacute;ln&#283; aktivn&iacute;m pracovn&iacute;m prost&#345;ed&iacute;. Toto menu zobraz&iacute;te kliknut&iacute;m prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na pozad&iacute; seznamu, kliknut&iacute;m prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na objekt v seznamu nebo v&yacute;b&#283;rem v&iacute;ce objekt&#367; v seznamu a n&aacute;sledn&yacute;m kliknut&iacute;m prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na jeden z nich.
 </p>
 <h3><span class="mw-headline" id="Keyboard_modifiers">Keyboard modifiers</span></h3>
 <p>The usual keyboard modifiers can be used in the Tree View. The modifiers can be combined as well.
@@ -161,12 +161,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122185216
+Cached time: 20260122185407
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.138 seconds
-Real time usage: 0.240 seconds
+CPU time usage: 0.124 seconds
+Real time usage: 0.209 seconds
 Preprocessor visited node count: 754/1000000
 Post&#8208;expand include size: 37991/2097152 bytes
 Template argument size: 12198/2097152 bytes
@@ -177,19 +177,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   50.379      1 -total
- 20.21%   10.184      1 Template:Interface_navi/cs
- 18.89%    9.516      1 Template:Std_Base_navi/cs
- 16.39%    8.257      3 Template:Navigation_menu_2
- 12.51%    6.300      2 Template:PropertyData
- 12.45%    6.272      1 Template:Userdocnavi/cs
-  7.41%    3.731      1 Template:TOCright
-  6.91%    3.483      3 Template:Variable
-  4.77%    2.402      1 Template:FALSE
-  4.22%    2.128     19 Template:KEY
+100.00%   48.627      1 -total
+ 21.80%   10.599      1 Template:Std_Base_navi/cs
+ 17.20%    8.364      1 Template:Interface_navi/cs
+ 15.31%    7.447      3 Template:Navigation_menu_2
+ 14.95%    7.270      2 Template:PropertyData
+ 13.57%    6.600      1 Template:Userdocnavi/cs
+  6.24%    3.036      3 Template:Variable
+  4.68%    2.276      1 Template:FALSE
+  4.20%    2.044      5 Template:Version
+  4.16%    2.023     19 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122185216 and revision id 1742602. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122185406 and revision id 1742604. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
