--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -46,8 +46,9 @@
 </p>
 <h3><span id="Kontextov.C3.A9_menu"></span><span class="mw-headline" id="Kontextov&eacute;_menu">Kontextov&eacute; menu</span></h3>
 <p>Mo&#382;nosti v kontextov&eacute;m menu stromov&eacute;ho zobrazen&iacute; z&aacute;vis&iacute; na vybran&yacute;ch objektech a aktu&aacute;ln&#283; aktivn&iacute;m pracovn&iacute;m prost&#345;ed&iacute;. Toto menu zobraz&iacute;te kliknut&iacute;m prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na pozad&iacute; seznamu, kliknut&iacute;m prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na objekt v seznamu nebo v&yacute;b&#283;rem v&iacute;ce objekt&#367; v seznamu a n&aacute;sledn&yacute;m kliknut&iacute;m prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na jeden z nich.
+</p><p><span id="Keyboard_modifiers"></span>
 </p>
-<h3><span class="mw-headline" id="Keyboard_modifiers">Keyboard modifiers</span></h3>
+<h3><span id="Modifik.C3.A1tory_kl.C3.A1vesnice"></span><span class="mw-headline" id="Modifik&aacute;tory_kl&aacute;vesnice">Modifik&aacute;tory kl&aacute;vesnice</span></h3>
 <p>The usual keyboard modifiers can be used in the Tree View. The modifiers can be combined as well.
 </p>
 <ul><li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>: hold down this key to select multiple objects.</li>
@@ -161,13 +162,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122185407
+Cached time: 20260122185444
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.124 seconds
-Real time usage: 0.209 seconds
-Preprocessor visited node count: 754/1000000
+CPU time usage: 0.131 seconds
+Real time usage: 0.222 seconds
+Preprocessor visited node count: 755/1000000
 Post&#8208;expand include size: 37991/2097152 bytes
 Template argument size: 12198/2097152 bytes
 Highest expansion depth: 7/100
@@ -177,19 +178,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.627      1 -total
- 21.80%   10.599      1 Template:Std_Base_navi/cs
- 17.20%    8.364      1 Template:Interface_navi/cs
- 15.31%    7.447      3 Template:Navigation_menu_2
- 14.95%    7.270      2 Template:PropertyData
- 13.57%    6.600      1 Template:Userdocnavi/cs
-  6.24%    3.036      3 Template:Variable
-  4.68%    2.276      1 Template:FALSE
-  4.20%    2.044      5 Template:Version
-  4.16%    2.023     19 Template:KEY
+100.00%   44.788      1 -total
+ 29.31%   13.127      1 Template:Std_Base_navi/cs
+ 24.24%   10.857      3 Template:Navigation_menu_2
+ 12.63%    5.656      1 Template:Interface_navi/cs
+ 11.74%    5.256      1 Template:Userdocnavi/cs
+ 10.87%    4.869      2 Template:PropertyData
+  6.16%    2.757      1 Template:PropertyView
+  5.97%    2.672     19 Template:KEY
+  5.28%    2.366      3 Template:Variable
+  4.22%    1.891      5 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122185406 and revision id 1742604. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122185443 and revision id 1742606. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
