--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -49,10 +49,10 @@
 </p><p><span id="Keyboard_modifiers"></span>
 </p>
 <h3><span id="Modifik.C3.A1tory_kl.C3.A1vesnice"></span><span class="mw-headline" id="Modifik&aacute;tory_kl&aacute;vesnice">Modifik&aacute;tory kl&aacute;vesnice</span></h3>
-<p>The usual keyboard modifiers can be used in the Tree View. The modifiers can be combined as well.
+<p>Ve stromov&eacute; struktu&#345;e lze pou&#382;&iacute;t obvykl&eacute; kl&aacute;vesov&eacute; zkratky. Zkratky lze tak&eacute; kombinovat.
 </p>
-<ul><li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>: hold down this key to select multiple objects.</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>: hold down this key to select all objects between a previously selected object and the next selected object.</li></ul>
+<ul><li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>: podr&#382;te tuto kl&aacute;vesu, abyste vybrali v&iacute;ce objekt&#367;.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>: podr&#382;te tuto kl&aacute;vesu, abyste vybrali v&scaron;echny objekty mezi d&#345;&iacute;ve vybran&yacute;m objektem a dal&scaron;&iacute;m vybran&yacute;m objektem.</li></ul>
 <h3><span class="mw-headline" id="Keyboard_shortcuts">Keyboard shortcuts</span></h3>
 <p>The following keyboard shortcuts are available when the focus is on the Tree View:
 </p>
@@ -162,11 +162,11 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122185444
+Cached time: 20260122185608
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.131 seconds
+CPU time usage: 0.132 seconds
 Real time usage: 0.222 seconds
 Preprocessor visited node count: 755/1000000
 Post&#8208;expand include size: 37991/2097152 bytes
@@ -178,19 +178,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.788      1 -total
- 29.31%   13.127      1 Template:Std_Base_navi/cs
- 24.24%   10.857      3 Template:Navigation_menu_2
- 12.63%    5.656      1 Template:Interface_navi/cs
- 11.74%    5.256      1 Template:Userdocnavi/cs
- 10.87%    4.869      2 Template:PropertyData
-  6.16%    2.757      1 Template:PropertyView
-  5.97%    2.672     19 Template:KEY
-  5.28%    2.366      3 Template:Variable
-  4.22%    1.891      5 Template:Version
+100.00%   44.699      1 -total
+ 23.41%   10.463      1 Template:Std_Base_navi/cs
+ 16.47%    7.364      3 Template:Navigation_menu_2
+ 14.61%    6.531      1 Template:Interface_navi/cs
+ 10.64%    4.758      1 Template:Userdocnavi/cs
+  9.86%    4.406      2 Template:PropertyData
+  6.83%    3.051      2 Template:Caption
+  5.67%    2.535      3 Template:Variable
+  5.49%    2.452      1 Template:TOCright
+  5.19%    2.320     19 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122185443 and revision id 1742606. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122185608 and revision id 1742608. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
