--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -53,7 +53,9 @@
 </p>
 <ul><li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>: podr&#382;te tuto kl&aacute;vesu, abyste vybrali v&iacute;ce objekt&#367;.</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>: podr&#382;te tuto kl&aacute;vesu, abyste vybrali v&scaron;echny objekty mezi d&#345;&iacute;ve vybran&yacute;m objektem a dal&scaron;&iacute;m vybran&yacute;m objektem.</li></ul>
-<h3><span class="mw-headline" id="Keyboard_shortcuts">Keyboard shortcuts</span></h3>
+<p><span id="Keyboard_shortcuts"></span>
+</p>
+<h3><span id="Kl.C3.A1vesov.C3.A9_zkratky"></span><span class="mw-headline" id="Kl&aacute;vesov&eacute;_zkratky">Kl&aacute;vesov&eacute; zkratky</span></h3>
 <p>The following keyboard shortcuts are available when the focus is on the Tree View:
 </p>
 <ul><li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">F</span>: opens a search box at the bottom of the tree, allowing to search and reach objects using their internal names or labels. To hide this search box, click inside it so that it has the focus and press <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span>.</li>
@@ -162,13 +164,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122185608
+Cached time: 20260122185630
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.132 seconds
-Real time usage: 0.222 seconds
-Preprocessor visited node count: 755/1000000
+CPU time usage: 0.125 seconds
+Real time usage: 0.434 seconds
+Preprocessor visited node count: 756/1000000
 Post&#8208;expand include size: 37991/2097152 bytes
 Template argument size: 12198/2097152 bytes
 Highest expansion depth: 7/100
@@ -178,19 +180,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.699      1 -total
- 23.41%   10.463      1 Template:Std_Base_navi/cs
- 16.47%    7.364      3 Template:Navigation_menu_2
- 14.61%    6.531      1 Template:Interface_navi/cs
- 10.64%    4.758      1 Template:Userdocnavi/cs
-  9.86%    4.406      2 Template:PropertyData
-  6.83%    3.051      2 Template:Caption
-  5.67%    2.535      3 Template:Variable
-  5.49%    2.452      1 Template:TOCright
-  5.19%    2.320     19 Template:KEY
+100.00%  102.334      1 -total
+ 22.93%   23.467      1 Template:Std_Base_navi/cs
+ 17.94%   18.357      2 Template:PropertyData
+ 17.49%   17.898      3 Template:Navigation_menu_2
+ 14.53%   14.871      3 Template:Variable
+ 11.16%   11.423      1 Template:Userdocnavi/cs
+  9.22%    9.438      1 Template:Interface_navi/cs
+  5.82%    5.959      1 Template:PropertyView
+  4.54%    4.650      1 Template:FALSE
+  4.06%    4.152      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122185608 and revision id 1742608. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122185629 and revision id 1742610. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
