--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -93,7 +93,7 @@
 </p>
 <h3><span id=".C4.8Cerven.C3.A9_zp.C4.9Btn.C3.A9_lom.C3.ADtko"></span><span class="mw-headline" id="&#268;erven&eacute;_zp&#283;tn&eacute;_lom&iacute;tko"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_suppressed.png&amp;filetimestamp=20240413201121&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_suppressed.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#268;erven&eacute; zp&#283;tn&eacute; lom&iacute;tko</span></h3>
 <p><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
-</p><p>This indicates a suppressed <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign</a> feature.
+</p><p>To ozna&#269;uje potla&#269;enou funkci pracovn&iacute; plochy <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign</a>.
 </p>
 <h3><span class="mw-headline" id="White_upwards_curved_arrow"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_link.png&amp;filetimestamp=20241010072353&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_link.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> White upwards curved arrow</span></h3>
 <p>This indicates a <a href="../Std_LinkMake.html" title="Std LinkMake">linked</a> object.
@@ -172,12 +172,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122194032
+Cached time: 20260122194128
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.138 seconds
-Real time usage: 0.302 seconds
+CPU time usage: 0.135 seconds
+Real time usage: 0.205 seconds
 Preprocessor visited node count: 763/1000000
 Post&#8208;expand include size: 37999/2097152 bytes
 Template argument size: 12206/2097152 bytes
@@ -188,19 +188,19 @@ Unstrip post&#8208;expand size: 2393/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   69.781      1 -total
- 37.58%   26.227      1 Template:Userdocnavi/cs
- 17.77%   12.399      1 Template:Std_Base_navi/cs
- 14.64%   10.213      3 Template:Navigation_menu_2
- 11.22%    7.832      1 Template:Interface_navi/cs
-  9.64%    6.724      1 Template:FALSE
-  4.81%    3.358      2 Template:Caption
-  3.63%    2.534      2 Template:PropertyData
-  3.51%    2.450      6 Template:MenuCommand
-  3.10%    2.164      1 Template:PropertyView
+100.00%   47.631      1 -total
+ 32.16%   15.318      1 Template:Std_Base_navi/cs
+ 20.25%    9.646      3 Template:Navigation_menu_2
+ 15.69%    7.475      1 Template:Interface_navi/cs
+ 11.97%    5.703      1 Template:Userdocnavi/cs
+  6.13%    2.921      2 Template:PropertyData
+  5.56%    2.649      1 Template:FALSE
+  5.52%    2.627      6 Template:MenuCommand
+  5.20%    2.476      2 Template:Caption
+  3.85%    1.834      3 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122194032 and revision id 1742640. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122194128 and revision id 1742643. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
